Fix crash when selecting "Open with other application" on download notification

BUG: 461529